--- a/index.css
+++ b/index.css
@@ -1,39 +1,40 @@
 body {
-    background-color: #04acc4;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    position: relative;
-    flex-direction: column;
-  }
-  
-  h1 {
-    color: white;
-    margin: 8px;
-    font-size: 3em;
-    transition: font-size 0.5s;
-  }
-  
-  p,
-  .esquina-inferior-izquierda {
-    color: white;
-    margin: 8px;
-    font-size: 1.5em;
-  }
-  
-  .esquina-inferior-izquierda {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-  
-  #logo {
-    position: absolute;
-    top: 0;
-    right: 0;
-    max-width: 100px;
-    max-height: 100px;
-    margin: 8px;
-  }
+  background-color: #04acc4;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  position: relative;
+  flex-direction: column;
+}
+
+h1 {
+  color: white;
+  margin: 8px;
+  font-size: 8em;
+  transition: font-size 0.5s;
+  text-align: center;
+}
+
+p,
+.esquina-inferior-izquierda {
+  color: white;
+  margin: 8px;
+  font-size: 1.5em;
+}
+
+.esquina-inferior-izquierda {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+#logo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  max-width: 100px;
+  max-height: 100px;
+  margin: 8px;
+}
